# 7-wonders-duel

./: .gitignore  README.md
7 Wonders Duel/: 7 Wonders Duel.sln  CMakeLists.txt
7 Wonders Duel/7 Wonders Duel/: 7 Wonders Duel.vcxproj  7 Wonders Duel.vcxproj.filters  AIStates.h  ActiveProgressTokens.cpp  ActiveProgressTokens.h  Age2Deck.cpp  Age2Deck.h  Age3Deck.cpp  Age3Deck.h  AgeICards.cpp  AgeICards.h  AiSates.cpp  Board.cpp  Board.h  BotUtils.cpp  BotUtils.h  Button.cpp  Button.h  BuyingState.h  Card.cpp  Card.h  CardRender.cpp  CardRender.h  Cost.cpp  Cost.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameMechanics.cpp  GameMechanics.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  GlobalState.cpp  GlobalState.h  GuildDeck.cpp  (+40 more)
7 Wonders Duel/7 Wonders Duel/Config/: suportedKeys.ini  window.ini
7 Wonders Duel/7 Wonders Duel/Utils/: Age1CardsNames.txt  Age1CardsPosition.txt  Age1CardsPositionsReversed.txt  Age1CardsSetUpCards.txt  Age1DeckPresets.txt  Age2DeckNames.txt  Age2DeckPosition.txt  Age2DeckPresets.txt  Age2DeckSetUpCards.txt  Age3DeckNames.txt  Age3DeckPosition.txt  Age3DeckPresets.txt  Age3DeckSetUpCards.txt  GameSetUpStages.txt  NumbersInit.txt  NumbersPosition.txt  TokenNames.txt  TokenPosition.txt  TokenPresets.txt  WarTokenNames.txt  WarTokenPosition.txt  WarTokenPresets.txt  WonderCardsNames.txt  WonderCardsNamesSmall.txt  WonderCardsPosition.txt  WonderCardsPositionSmall.txt  WonderCardsPresets.txt  WonderCardsPresetsSmall.txt
7 Wonders Duel/7WondersDuelTests/: 7WondersDuelTests.vcxproj  7WondersDuelTests.vcxproj.filters  Age1CardsTest.cpp  Age2DeckTest.cpp  Age3DeckTest.cpp  BoardStateCheckerTest.cpp  CostTests.cpp  ManufacturedGoodsTest.cpp  PointTest.cpp  RawMaterialsTest.cpp  WonderCardDeckTest.cpp  WonderCardModelTestcpp.cpp
7 Wonders Duel/Logging/: CMakeLists.txt  Logging.cpp  Logging.h  Logging.vcxproj
